workshop03/code-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: code
  labels:
    app: code
    name: code
